# agent-manager

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml.example  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
app/: app.go
cmd/orchestrator/: main.go
daemon/: daemon.go
log/: log.go
orchestrator/: ansi.go  client.go  config.go  loop.go  mcp.go  presets.go  protocol.go  watcher.go
orchestrator/prompts/: coder.txt  orchestrator.txt  researcher.txt  settings_coder.json  settings_orchestrator.json  settings_researcher.json
scripts/: build-and-start-webui.sh  build-and-start.sh
session/: instance.go  storage.go
session/tmux/: tmux.go  tmux_integration_test.go
src/agent_manager/: __init__.py  auth.py  files.py  instance.py  main.py  persistence.py  server.py  state.py
static/: app.js  index.html  style.css
tests/: test_server.py
webserver/: ARCHITECTURE.md  clisessions.go  convlog.go  convlog_test.go  pane_parser.go  server.go
webserver/static/: index.html
webserver/static/js/: ansi.js  api.js  convlog.js  input-history.js  yaml.js
