[project]
name = "agent-manager"
version = "0.1.0"
description = "Web UI for running and orchestrating Claude Agent SDK sessions"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
agent-manager = "agent_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
